<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp" >

        <TextView
            android:id = "@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            tools:context=".MainActivity"
            android:layout_centerInParent="true"
            android:textSize="25sp"
            android:textColor="#000" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp">

        <EditText
        android:id = "@+id/username"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/username" />
    </RelativeLayout>
    
     <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp">

       <EditText
        android:id = "@+id/password"
        android:inputType="textPassword"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/password" />

    </RelativeLayout>
    
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    <CheckBox
        android:id="@+id/CheckBox"
        android:textIsSelectable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rememberPassword"
        android:textColor="#FFF"
        android:layout_centerInParent="true"/>
    </RelativeLayout>

</LinearLayout>