<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >
	
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp" >
		
        <Button

            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textAllCaps="true"
            android:id = "@+id/locateOnMap"
            android:background="@drawable/button_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/locateOnMap"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:layout_centerInParent="true"
            android:textSize="30sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="40dp"
            android:textColor="#FFF" />
            
    </RelativeLayout>
	
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="-10dp"
        android:layout_marginTop="10dp" >

        <EditText
            android:layout_marginLeft="30dp"
            android:id = "@+id/spotTitle"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:hint="@string/spotTitle"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:gravity="bottom"
            android:lines="1"
            android:layout_alignParentBottom="true"/>
        
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp" >

        <EditText
            android:layout_marginLeft="30dp"
            android:id = "@+id/address"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:hint="@string/address"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:gravity="bottom"
            android:lines="1"
            android:layout_alignParentBottom="true"/>
        
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp" >

        <EditText
            android:id = "@+id/cityStateZip"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:hint="@string/cityStateZip"
            android:gravity="bottom"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:lines="1"
            android:layout_alignParentBottom="true"/>
        
    </RelativeLayout>
	
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp" 
        android:gravity="bottom"
        android:layout_marginTop="10dp" >
        
	    <Spinner
	        android:textSize="20sp"
		    android:id="@+id/spotTypeSpinner"
		    android:layout_width="200dp"
		    android:layout_height="50dp"
		    android:entries="@array/spotTypes"
		    android:prompt="@string/spinnerPrompt"
		    android:background="@drawable/spinner_style"
		    android:layout_marginLeft="30dp" />
	    
	</RelativeLayout>
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            android:padding="10dp"
            android:text="@string/cancel"
            android:background="@drawable/button_background_3"
            android:textColor="@drawable/button_color_3"
            android:textSize="20sp" />

        <Button
            android:id="@+id/continueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_background_3"
            android:textColor="@drawable/button_color_3"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/continu"
            android:textSize="20sp" />
    </RelativeLayout>
    
</LinearLayout>