<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background">
    
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
		
	    
	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="60dp"
	        android:layout_marginTop="30dp" >
			
	        <Button
	
	            android:layout_centerHorizontal="true"
	            android:layout_centerVertical="true"
	            android:textAllCaps="true"
	            android:id = "@+id/locateOnMap"
	            android:background="@drawable/button_layout_3"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/locateOnMap"
	            android:gravity="center_horizontal"
	            android:paddingLeft="10dp"
	            android:paddingRight="10dp"
	            android:paddingTop="5dp"
	            android:layout_centerInParent="true"
	            android:textSize="30sp"
	            android:layout_marginLeft="20dp"
	            android:layout_marginRight="40dp"
	            android:textColor="#FFF" />
	            
	    </RelativeLayout>
		
	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:layout_marginRight="30dp"
	        android:layout_marginBottom="-10dp"
	        android:layout_marginTop="10dp" >
	
	        <EditText
	            android:layout_marginLeft="30dp"
	            android:id = "@+id/spotTitle"
	            android:layout_width="fill_parent"
	            android:layout_height="match_parent"
	            android:hint="@string/spotTitle"
	            android:layout_centerVertical="true"
	            android:textSize="20sp"
	            android:gravity="bottom"
	            android:lines="1"
	            android:layout_alignParentBottom="true"
	            android:textColor="#FFFFFF"/>
	        
	    </RelativeLayout>
	    
	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:layout_marginRight="30dp"
	        android:layout_marginTop="10dp" >
	
	        <EditText
	            android:layout_marginLeft="30dp"
	            android:id = "@+id/address"
	            android:layout_width="fill_parent"
	            android:layout_height="match_parent"
	            android:hint="@string/address"
	            android:layout_centerVertical="true"
	            android:textSize="20sp"
	            android:gravity="bottom"
	            android:lines="1"
	            android:layout_alignParentBottom="true"
	            android:textColor="#FFFFFF"/>
	        
	    </RelativeLayout>
	    
	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:layout_marginRight="30dp"
	        android:layout_marginLeft="30dp" >
	
	        <EditText
	            android:id = "@+id/cityStateZip"
	            android:layout_width="fill_parent"
	            android:layout_height="match_parent"
	            android:hint="@string/cityStateZip"
	            android:gravity="bottom"
	            android:layout_centerVertical="true"
	            android:textSize="20sp"
	            android:lines="1"
	            android:layout_alignParentBottom="true"
	            android:textColor="#FFFFFF"/>
	        
	    </RelativeLayout>
		
	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="50dp" 
	        android:gravity="bottom"
	        android:layout_marginTop="10dp" >
	         <!--
		    <Spinner
		        android:textSize="20sp"
			    android:id="@+id/spotTypeSpinner"
			    android:layout_width="200dp"
			    android:layout_height="50dp"
			    android:entries="@array/spotTypes"
			    android:prompt="@string/spinnerPrompt"
			    android:layout_marginLeft="30dp"/>
			 -->
		    
		    <Spinner
		        android:textSize="20sp"
			    android:id="@+id/spotTypeSpinner"
			    android:layout_width="200dp"
			    android:layout_height="50dp"
			    android:entries="@array/spotTypes"
			    android:prompt="@string/spinnerPrompt"
			    android:layout_marginLeft="30dp" />
		    
		</RelativeLayout>
		<LinearLayout 
		    android:layout_height="wrap_content"
		    android:layout_width="fill_parent"
		    android:layout_marginRight="30dp"
		    android:layout_marginLeft="30dp"
		    android:layout_marginTop="20dp"
		    android:layout_marginBottom="20dp">
		    
		    <ImageButton
		        android:id="@+id/takePhotoButton"
		        android:contentDescription="Take photo button"
		        android:background="@drawable/take_picture_background"
		        android:scaleType="centerCrop"
		        android:layout_weight="1"
		        android:layout_height="150dp"
		        android:layout_width="0dp"
		        android:layout_marginRight="1dp"/>
		    
		    <ImageButton
		        android:id="@+id/uploadPhotoButton"
		        android:scaleType="centerCrop"
		        android:contentDescription="Upload photo"
		        android:background="@drawable/gallery_picture_background"
		        android:layout_weight="1"
		        android:layout_height="150dp"
		        android:layout_width="0dp"/>
	    </LinearLayout>
	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="0dp" >
	
	        <Button
	            android:id="@+id/cancelButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:gravity="center"
	            android:layout_centerInParent="true"
	            android:layout_marginLeft="30dp"
	            android:padding="10dp"
	            android:text="@string/cancel"
	            android:background="@drawable/button_layout_3"
	            android:textColor="#FFF"
	            android:textSize="20sp" />
	
	        <Button
	            android:id="@+id/continueButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:layout_centerVertical="true"
	            android:layout_marginRight="30dp"
	            android:background="@drawable/button_layout_3"
	            android:gravity="center"
	            android:padding="10dp"
	            android:text="@string/continu"
	            android:textColor="#FFF"
	            android:textSize="20sp" />
	    </RelativeLayout>
	    
	</LinearLayout>
</ScrollView>