<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp" >
		
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAllCaps="true"
            tools:context=".MainActivity"
            android:layout_centerInParent="true"
            android:textSize="30sp"
            android:textColor="#FFF" />
        
    </RelativeLayout>
    
     <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >
        
	    <ImageView 
	            android:contentDescription="Hubba Hubba Photo"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"
	            android:layout_centerHorizontal="true"
	            android:background="@drawable/gettinthere"
	            />
	</RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp" >

        <Button
            android:id="@+id/logInButton"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/logIn"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:background="@drawable/button_background_3"
            android:textColor="@drawable/button_color_3" />
    </RelativeLayout>
    
     <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp" >

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/signUp"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:background="@drawable/button_background_3"
            android:textColor="@drawable/button_color_3"/>

    </RelativeLayout>
    
     <!--
      <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#000000" >

        <Button
            android:id="@+id/connectButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/facebook"
            android:textColor="#FFFFFF" />

    </RelativeLayout>
	-->
	
	<!--
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp" >

        <Button
            android:id="@+id/viewMapButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/viewMap"
            android:textColor="#FFFFFF"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:background="@drawable/button_layout" />

    </RelativeLayout>
   	-->
</LinearLayout>
